--- a/스파르타 과제/3. Django, DRF/requirements.txt
+++ b/스파르타 과제/3. Django, DRF/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.7.0
 asgiref==3.8.1
+black==24.10.0
 certifi==2024.12.14
+click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 Django==4.2
@@ -11,11 +13,15 @@ httpx==0.28.1
 idna==3.10
 jiter==0.8.2
 joblib==1.4.2
+mypy-extensions==1.0.0
 mysqlclient==2.2.7
 numpy==2.1.3
 openai==1.57.4
+packaging==24.2
 pandas==2.2.3
+pathspec==0.12.1
 pillow==11.1.0
+platformdirs==4.3.6
 pydantic==2.10.3
 pydantic_core==2.27.1
 python-dateutil==2.9.0.post0
