--- a/스파르타 과제/3. Django, DRF/requirements.txt
+++ b/스파르타 과제/3. Django, DRF/requirements.txt
@@ -7,10 +7,14 @@ click==8.1.8
 colorama==0.4.6
 distro==1.9.0
 Django==4.2
+django-cors-headers==4.6.0
+djangorestframework==3.15.2
+drf-yasg==1.21.8
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
 idna==3.10
+inflection==0.5.1
 jiter==0.8.2
 joblib==1.4.2
 mypy-extensions==1.0.0
@@ -26,6 +30,7 @@ pydantic==2.10.3
 pydantic_core==2.27.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
 scikit-learn==1.5.2
 scipy==1.14.1
 six==1.16.0
@@ -35,3 +40,4 @@ threadpoolctl==3.5.0
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
+uritemplate==4.1.1
