--- a/스파르타 과제/3. Django, DRF/requirements.txt
+++ b/스파르타 과제/3. Django, DRF/requirements.txt
@@ -9,6 +9,7 @@ distro==1.9.0
 Django==4.2
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
+drf-nested-routers==0.94.1
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
