--- a/스파르타 과제/3. Django, DRF/requirements.txt
+++ b/스파르타 과제/3. Django, DRF/requirements.txt
@@ -9,6 +9,7 @@ distro==1.9.0
 Django==4.2
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
+djangorestframework_simplejwt==5.4.0
 drf-nested-routers==0.94.1
 h11==0.14.0
 httpcore==1.0.7
@@ -28,6 +29,7 @@ pillow==11.1.0
 platformdirs==4.3.6
 pydantic==2.10.3
 pydantic_core==2.27.1
+PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
