--- a/스파르타 과제/3. Django, DRF/requirements.txt
+++ b/스파르타 과제/3. Django, DRF/requirements.txt
@@ -11,6 +11,7 @@ django-cors-headers==4.6.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-nested-routers==0.94.1
+exceptiongroup==1.2.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -31,6 +32,7 @@ pydantic==2.10.3
 pydantic_core==2.27.1
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 scikit-learn==1.5.2
@@ -39,6 +41,7 @@ six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.3
 threadpoolctl==3.5.0
+tomli==2.2.1
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2024.2
